# api-next

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement_request.md  feature_request.md
src/: main.rs
src/lib/: auth.rs  discord.rs  mod.rs  response.rs
src/routes/: auth.rs
