[package]
name = "api-next"
version = "0.0.0"
authors = ["gilbert"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
rocket_contrib = "0.4.4"
rocket_cors = "0.5.0"
jsonwebtoken = "5.0.1"
